<resources>
    <string name="app_name">MealTime</string>

    <string name="email">Email</string>
    <string name="email_example">ex) abc123@gmail.com</string>

    <string name="password">Password</string>
    <string name="password_example">●●●●●●</string>

    <string name="nickname">Nickname</string>
    <string name="nickname_example">ex) White Horse</string>
    <string name="major">Major</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_sign_up">SIGN UP</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="btn_send">SEND</string>

    <string name="menu_meal_time">Meal Time</string>
    <string name="menu_my_info">My Information</string>
    <string name="menu_logout">Logout</string>

    <string name="txt_sign_up">Not a member? Sign up</string>

    <string name="select_major">Select your major</string>
    <string name="join_us">Join us!</string>
    <string name="how_many">people want to eat with you!</string>

    <string name="open">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="submit">SUBMIT</string>
    <string name="remove">REMOVE</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_page">My Page</string>
    <string name="menu_chat">Chat</string>

    <string name="success">SUCCESS</string>
    <string name="error">ERROR</string>

    <string name="error_wifi">Only CNU wifi is accessible</string>
    <string name="error_empty">Fill all the blanks</string>
    <string name="error_nickname">Input your nickname with 1-7 characters for number or alphabet</string>
    <string name="error_email">Input your correct E-mail address</string>
    <string name="error_password">Password must contain at least 6 or more characters</string>

    <string name="copyright">Copyright 2017. Haeun.Kim all rights reserved.</string>
</resources>
