<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.haeunkim.mealtime.viewmodel.SignUpViewModel"/>
    </data>

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@drawable/dinner2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="horizontal"
        tools:context="com.example.haeunkim.mealtime.view.SignUpActivity">

        <LinearLayout
            android:background="@color/transparent_30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/join_us"
                android:textSize="30sp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textColor="@color/white"/>

            <EditText
                android:inputType="text"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nickname_example"
                android:text="@{viewModel.nickName}"
                android:textColor="@color/white"
                app:addTextChangedListener="@{viewModel.nameWatcher}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/email"
                android:textColor="@color/white"/>

            <EditText
                android:inputType="textEmailAddress"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_example"
                android:text="@{viewModel.email}"
                android:textColor="@color/white"
                app:addTextChangedListener="@{viewModel.emailWatcher}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="@color/white"/>

            <EditText
                android:inputType="textPassword"
                android:backgroundTint="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_example"
                android:text="@{viewModel.pwd}"
                android:textColor="@color/white"
                app:addTextChangedListener="@{viewModel.pwdWatcher}"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/major"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/spinner_border">

                <Spinner
                    android:id="@+id/spin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/select_major"
                    android:spinnerMode="dialog" />

            </LinearLayout>

            <Button
                android:background="@drawable/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/btn_sign_up"
                android:textColor="@color/darkNavy"
                android:onClick="@{viewModel::onClickSignUp}"/>

        </LinearLayout>

    </LinearLayout>
</layout>
